testing algorithm class